2009-11-04  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/display.py:
	  Since we can't parse times like 4W2D correctly, only print times
	  in one unit, picking the biggest one that doesn't give a remainder.

2009-11-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/list.py:
	  Add l alias for list.
	* python/things/command/thing.py:
	  Allow entering due date with D: instead of tracebacking.
	* python/things/command/main.py:
	  Use self.stdout
	  Fix done for recurring tasks.

2009-11-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/common/parse.py:
	  extract a parse_date so we can use it in two places.
	* couchdb/views/open-things-due (added):
	* couchdb/views/open-things-due/map.js (added):
	  Add a view to support list due/overdue/today
	* python/things/command/thing.py (added):
	  Add a thing subcommand, and thing due to change the due date.
	* python/things/command/list.py (added):
	  Add a list subcommand, and due/overdue/today
	* python/things/command/display.py (added):
	  Extract display code to a separate module.
	* python/things/command/main.py:
	  Add the commands with subcommands.

2009-11-02  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/model/couch.py:
	  Work with things without time.

2009-11-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/main.py:
	* python/things/command/replicate.py (added):
	  Add a command to set up two way replication.

2009-11-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/main.py:
	* python/things/model/couch.py:
	  Implemented done and edit.

2009-11-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/main.py:
	* python/things/common/parse.py:
	  Do proper time/recurrence parsing and formatting.

2009-11-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/things/command/main.py: